# mIRea

./: 4-6.txt  README.md  Romanian-Arabic  Romanian-Arabic.cpp  a.out  ballsssssssssssssss  ballsssssssssssssss.cpp  base_to_base.cpp  data.txt  fifth  fifth.cpp  fifth_refact  fifth_refact.cpp  fifth_refact_last_v  fifth_refact_last_v.cpp  first  first.cpp  five_c_o_p_y.cpp  for_3_3.txt  fourth  fourth.cpp  gnuplot.h  graphixc  graphixc.cpp  numb5_5_2.txt  primenumbers.txt  secound  secound.cpp  temp  temp.cpp  temp2  temp3  template.cpp  third  third.cpp  tpoint.txt  us_flag.gnu  vector_pair.cpp  words.txt
Snake/: makefile
Snake_automat_1sem/: Automat_Snake.cpp  app  main.cpp  makefile  sfml-app
addition5tasks/: all_in_one  all_in_one.cpp  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp  task5_DP  task5_DP.cpp
gosa/: app  main.cpp
snake/: app  main.cpp  main_core.cpp  main_refact.cpp  temp.cpp
temp_trash/: CMakeLists.txt
